@@ -17,10 +17,8 @@
 package org.apache.solr.security;
 
 import static java.nio.charset.StandardCharsets.UTF_8;
-import static java.util.Collections.singletonMap;
 
 import java.io.IOException;
-import java.lang.invoke.MethodHandles;
 import java.util.ArrayList;
 import java.util.Collections;
 import java.util.Map;
@@ -63,12 +61,8 @@ import org.eclipse.jetty.client.StringRequestContent;
 import org.junit.After;
 import org.junit.Before;
 import org.junit.Test;
-import org.slf4j.Logger;
-import org.slf4j.LoggerFactory;
 
 public class BasicAuthIntegrationTest extends SolrCloudAuthTestCase {
-
-  private static final Logger log = LoggerFactory.getLogger(MethodHandles.lookup().lookupClass());
 
   private static final String COLLECTION = "authCollection";
 
@@ -191,7 +185,7 @@ public class BasicAuthIntegrationTest extends SolrCloudAuthTestCase {
         httpClient,
         baseUrl + authzPrefix,
         Utils.toJSONString(
-            singletonMap(
+            Map.of(
                 "set-permission", Map.of("collection", "x", "path", "/update/*", "role", "dev"))),
         "harry",
         "HarryIsUberCool");
@@ -204,8 +198,7 @@ public class BasicAuthIntegrationTest extends SolrCloudAuthTestCase {
         httpClient,
         baseUrl + authzPrefix,
         Utils.toJSONString(
-            singletonMap(
-                "set-permission", Map.of("name", "collection-admin-edit", "role", "admin"))),
+            Map.of("set-permission", Map.of("name", "collection-admin-edit", "role", "admin"))),
         "harry",
         "HarryIsUberCool");
     verifySecurityStatus(
@@ -298,7 +291,7 @@ public class BasicAuthIntegrationTest extends SolrCloudAuthTestCase {
       fail("Request should have failed because of missing auth");
     }
 
-    SolrParams params = new MapSolrParams(Collections.singletonMap("q", "*:*"));
+    SolrParams params = new MapSolrParams(Map.of("q", "*:*"));
     // Query that fails due to missing credentials
     exp =
         expectThrows(
@@ -372,7 +365,7 @@ public class BasicAuthIntegrationTest extends SolrCloudAuthTestCase {
         new V2Request.Builder("/cluster/plugin")
             .forceV2(true)
             .POST()
-            .withPayload(singletonMap("add", plugin))
+            .withPayload(Map.of("add", plugin))
             .build();
     v2Request.setBasicAuthCredentials("harry", "HarryIsUberCool");
     v2Request.process(cluster.getSolrClient());
